Add send Email support

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 SERVERLESS_SERVICE_SUFFIX=
 ALARMS_NOTIFICATION_EMAIL=alert@example.com
 NODE_ENV=production
+CONTACT_SP_EMAIL=alert@example.com
+SOURCE_EMAIL=alert@example.com
+CONFIG_SET_NAME=alert@example.com
